[tool.poetry]
name = "tattoo"
version = "0.1.0"
description = ""
authors = ["changiinlee <changjin9792@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
streamlit = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
